# new_greenheart

./: .buildinfo  .gitignore  README.md  class_structure.html  describing_whats_in_classes.html  development_guidelines.html  features_not_currently_implemented.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  misc_thoughts.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  why_make_new_greenheart.html
.github/workflows/: ci.yml
_sources/: class_structure.md  describing_whats_in_classes.md  development_guidelines.md  features_not_currently_implemented.md  misc_thoughts.md  why_make_new_greenheart.md
examples/: test_all_examples.py
examples/01_dummy_wind/: plant_config.yaml  run_dummy_wind_case.py  tech_config.yaml
examples/02_dummy_wind_electrolyzer/: plant_config.yaml  run_dummy_wind_electrolyzer_case.py  tech_config.yaml
examples/02_wind_plant_electrolyzer/: tech_config.yaml
examples/03_wind_plant_electrolyzer/: plant_config.yaml  tech_config.yaml
examples/03_wind_plant_real_electrolyzer/: plant_config.yaml  tech_config.yaml
examples/04_feedstock_electrolyzer/: plant_config.yaml  run_feedstock_electrolyzer.py  tech_config.yaml
examples/04_wind_plant_real_electrolyzer/: run_wind_electrolyzer.py  tech_config.yaml
examples/05_wind_h2_opt/: driver_config.yaml  plant_config.yaml  run_wind_electrolyzer.py  tech_config.yaml
examples/06_hopp_h2/: hopp_config.yaml  plant_config.yaml  tech_config.yaml
examples/07_wind_ammonia/: 07_wind_ammonia.yaml  plant_config.yaml  run_wind_ammonia.py  tech_config.yaml
(+87 files in other folders)
