[project]
name = "new_greenheart"
description = "new_greenheart example package"
version = "0.1.0"
authors = []
dependencies = [
    "hopp",
    "greenheart",
    "jsonschema",
    "ruamel.yaml",
]

[project.optional-dependencies]
develop = [
    "pytest-subtests",
]

all = ["new_greenheart[develop]"]